# atosl-rs

./: AGENT.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  RELEASING.md  deploy.sh
.github/workflows/: build.yml  ci.yml  docs.yml
benches/: batch_symbolize.rs
docs/: .gitignore  Gemfile  _config.yml  index.md  installation.md
docs/tutorial/: address-modes.md  fat-binaries.md  getting-started.md  index.md  inline-frames.md  input-sources.md  library-api.md  output-formats.md  separate-debug-files.md  troubleshooting.md
docs/zh/: address-modes.md  fat-binaries.md  getting-started.md  index.md  inline-frames.md  input-sources.md  installation.md  library-api.md  output-formats.md  separate-debug-files.md  troubleshooting.md
scripts/: refresh_apple_goldens.sh
src/: atosl.rs  crash.rs  demangle.rs  lib.rs  main.rs
tests/: apple_golden.rs  atos_differential.rs  cli.rs  crash.rs
tests/fixtures/apple/: inline_golden.c  macho_golden.c
tests/golden/apple/: fat_macho_ambiguous.stderr  fat_macho_arm64_dwarf.json  fat_macho_arm64_dwarf.verbose  fat_macho_uuid_dwarf.json  fat_macho_x86_64_dwarf.txt  macho_dwarf.json  macho_dwarf.txt  macho_dwarf.verbose  macho_symbols.json  macho_symbols.txt
