[package]
name = "atosl"
version = "0.1.13"
edition = "2021"
description = "🦀️atos for linux by rust - A partial replacement for Apple's atos tool for converting addresses within a binary file to symbols."
license = "MIT"
repository = "https://github.com/everettjf/atols-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "3.2.25", features = ["derive"] }
gimli = "0.27.2"
memmap2 = "0.5.10"
object = "0.31.1"
symbolic-common = "12.1.5"
symbolic-demangle = "12.1.5"
