[package]
name = "atosl"
version = "0.1.13"
edition = "2021"
rust-version = "1.60"
description = "A partial replacement for Apple's atos tool for converting binary addresses to symbols."
license = "MIT"
repository = "https://github.com/everettjf/atosl-rs"
homepage = "https://github.com/everettjf/atosl-rs"
readme = "README.md"
keywords = ["atos", "symbolication", "debug", "dwarf", "macho"]
categories = ["command-line-utilities", "development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.0", default-features = false, features = ["derive", "std"] }
gimli = "0.26.1"
memmap = "0.7.0"
object = "0.28.1"
symbolic-common = "8.5.0"
symbolic-demangle = "8.5.0"
