[package]
name = "atosl"
version = "0.1.16"
edition = "2021"
rust-version = "1.74"
description = "A partial replacement for Apple's atos tool for converting binary addresses to symbols."
license = "MIT"
repository = "https://github.com/everettjf/atosl-rs"
homepage = "https://github.com/everettjf/atosl-rs"
readme = "README.md"
keywords = ["atos", "symbolication", "debug", "dwarf", "macho"]
categories = ["command-line-utilities", "development-tools::debugging"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.32", features = ["derive"] }
gimli = "0.26.1"
memmap2 = "0.5.10"
object = "0.28.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
symbolic-common = "8.5.0"
symbolic-demangle = "8.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
predicates = "3.1.3"
tempfile = "3.19.1"

[[bench]]
name = "batch_symbolize"
harness = false

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
